src/objects/Promo_Email__c.object
<CustomObject>
    <description>Object to manage customized email blasts to specific clients on specific cases.</description>
    <fields>
        <fullName>Account_Owner_City__c</fullName>
        <formula>BLANKVALUE(Contact__r.Account.Owner.City, &quot;Waye&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>Email of the Account Owner</description>
        <inlineHelpText>Email of the Account Owner</inlineHelpText>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Owner_First_Name__c</fullName>
        <formula>Contact__r.Account.Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Last_Name__c</fullName>
        <formula>Contact__r.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Phone__c</fullName>
        <formula>BLANKVALUE(Contact__r.Account.Owner.Phone, &quot;215.494.7650&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_State__c</fullName>
        <formula>BLANKVALUE(Contact__r.Account.Owner.State, &quot;PA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Street__c</fullName>
        <formula>BLANKVALUE(Contact__r.Account.Owner.Street, &quot;999 Old Eagle School Rd, Suite 118&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Zip__c</fullName>
        <formula>BLANKVALUE(Contact__r.Account.Owner.PostalCode , &quot;19087&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Discovery Alert from CL</fullName>
                    <default>true</default>
                    <label>Discovery Alert from CL</label>
                </value>
                <value>
                    <fullName>Plaintiff Special Offer</fullName>
                </value>
                <value>
                    <fullName>Multi-party IP Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Promo Emails</relationshipLabel>
        <relationshipName>Promo_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date1__c</fullName>
        <formula>DATEVALUE(   CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_After_Created_Date__c</fullName>
        <formula>Today()-Created_Date1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days After Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deponent_Name__c</fullName>
        <label>Deponent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <formula>Contact__r.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>btucker@nextgenreporting.com</fullName>
                </value>
                <value>
                    <fullName>jfeggins@nextgenreporting.com</fullName>
                    <default>true</default>
                    <label>jfeggins@nextgenreporting.com</label>
                </value>
                <value>
                    <fullName>ekerpius@nextgenreporting.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resulting_Deposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resulting Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipLabel>Promo Emails</relationshipLabel>
        <relationshipName>Promo_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Promo_Email__c</fullName>
        <formula>IF(TEXT(Case_Type__c)==&apos;Multi-party IP Case&apos;,true, NOT(OR( Contact__r.Attendee_Count__c &gt;0 , TEXT(Contact__r.VIP_Level__c)=&apos;VIP 1&apos;,TEXT( Contact__r.Account.VIP_Level__c) =&apos;VIP 1&apos;, Contact__r.HasOptedOutOfEmail )))</formula>
        <label>Send Promo Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Promo Email</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Promo Email</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>